# liu-tng022-soft-body-simulation

./: .gitignore  README.md
graphics/: CMakeLists.txt
graphics/src/: Cube.cpp  Cube.h  Functions.cpp  Functions.h  Mass.cpp  Mass.h  main.cpp
preparation/Matlab/: twoMassesEuler.m
preparation/ThreeMassesEuler/: Euler.m  threeMassesEuler.m  twoMassesEuler.m  twoMassesEuler.m~  visualize2D.m
preparation/ThreeMassesRk4/: create_direction.m  rk4.m  threeMassesRk4m.m
preparation/TwoMassesEuler/: Visualize.m  create_direction.m  twoMassesEuler.m  twoMassesEuler.m~
preparation/nMassesEuler/: calcMSDForce.m  create_MSD.m  nMassesEuler.m  visualize2D.m
preparation/nMassesEuler2D/: create_MSD.m  direction.m  nMassesEuler2D.m
preparation/nMassesEuler2DVector/: calcMSDForce2D.m  createMSDVector2D.m  nMassesEuler2DVector.m  visualize2D.m
preparation/nMassesEuler2DVector/old/: abs_val.m  create_MSD.m  motion.m
preparation/nMassesEuler2DVectorNeighbors/: calcMSDForce2DNeighbors.m  createMSDVector2DNeighbors.m  nMassesEuler2DVectorNeighbors.m  visualize2D.m
preparation/nMassesEuler3DVectorNeighbors/: calcMSDForce3DNeighbors.m  cleanConnections.m  createMSDVector3DNeighbors.m  genMasses.m  nMassesEuler3DVectorNeighbors.m  visualize3D.m
preparation/nMassesEulerChangeDirection/: create_MSD.m  nMassesEulerChangeDirection.m  visualize2D.m
preparation/nMassesRk4/: abs_val.m  acceleration.m  create_MSD.m  nMassesEulerChangeDirection.m  rk4.m
